logs/dag_id=weather_dag_api/run_id=manual__2023-04-27T07:04:55.413748+00:00/task_id=cities.insert_data_Odesa/attempt=1.log
[2023-04-27T07:06:17.385+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-27T07:04:55.413748+00:00 [queued]>
[2023-04-27T07:06:17.661+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-27T07:04:55.413748+00:00 [queued]>
[2023-04-27T07:06:17.664+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:17.671+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T07:06:17.682+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:18.434+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Odesa> on 2023-04-27 07:04:55.413748+00:00
[2023-04-27T07:06:18.525+0000] {standard_task_runner.py:55} INFO - Started process 742 to run task
[2023-04-27T07:06:18.568+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Odesa', 'manual__2023-04-27T07:04:55.413748+00:00', '--job-id', '121', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmplzb049h7']
[2023-04-27T07:06:18.571+0000] {standard_task_runner.py:83} INFO - Job 121: Subtask cities.insert_data_Odesa
[2023-04-27T07:06:20.123+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-27T07:04:55.413748+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T07:06:25.154+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Odesa
AIRFLOW_CTX_EXECUTION_DATE=2023-04-27T07:04:55.413748+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-27T07:04:55.413748+00:00
[2023-04-27T07:06:25.176+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				12.7,
				0.0,
				6.4,
				'Odesa)';
[2023-04-27T07:06:25.765+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:24.152+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:24.302+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				12.7,
				0.0,
				6.4,
				'Odesa)';, parameters: None
[2023-04-27T07:07:24.354+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 6:     'Odesa)';
                    ^

[2023-04-27T07:07:25.282+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Odesa, execution_date=20230427T070455, start_date=20230427T070617, end_date=20230427T070725
[2023-04-27T07:07:26.737+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 121 for task cities.insert_data_Odesa (syntax error at or near ";"
LINE 6:     'Odesa)';
                    ^
; 742)
[2023-04-27T07:07:28.186+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T07:07:28.744+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
